--- a/apps/browser/style/browser.css
+++ b/apps/browser/style/browser.css
@@ -871,6 +871,10 @@ li[role="listitem"] small {
   display: none;
 }
 
+#danger-dialog {
+  z-index: 200;
+}
+
 #settings ul {
   margin: 0;
   padding: 0;
