--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -460,7 +460,7 @@ footer {
 
 #fullscreen-toolbar > a {
   display: inline-block;
-  width: 25%;
+  width: 20%;
   height: 100%;
 }
 
@@ -482,6 +482,10 @@ footer {
 
 #fullscreen-share-button {
   background-image: url('images/iconaction_share_30x30.png');
+}
+
+#fullscreen-info-button {
+  background-image: url('images/iconaction_media_info_30x30.png');
 }
 
 #fullscreen-delete-button {
