--- a/apps/system/style/themes/default/core.css
+++ b/apps/system/style/themes/default/core.css
@@ -107,7 +107,7 @@
     left: calc(50% - 34rem);
     width: 68rem;
     height: 48rem;
-    padding: 6rem 6rem;
+    padding: 6rem;
     font-size: 2.2rem;
     background-image: none;
     background-color: #333333;
