Bug 941353 - [B2G][SMS] When more than 12 recipients are added to a SMS message user is not able to edit message field r=schung
* Add a height: 0 property to the to-field element

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -781,6 +781,7 @@ form.bottom[role="search"].messages-compose-form {
   z-index: 10;
 
   display: none;
+  height: 0; /* see bug 941353 */
 
   text-align: left;
   color: black;
