--- a/apps/system/style/update_manager/update_manager.css
+++ b/apps/system/style/update_manager/update_manager.css
@@ -24,6 +24,16 @@ html, body {
   animation: 0.9s fn-rotate infinite linear;
 }
 
+@keyframes fn-rotate {
+  from {
+    transform: rotate(1deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 #update-manager-container.downloading > .activity {
   display: block;
 }
