--- a/apps/system/style/lockscreen/lockscreen.css
+++ b/apps/system/style/lockscreen/lockscreen.css
@@ -254,56 +254,10 @@
   top: -8.1rem;
 }
 
-#lockscreen-area-slide #lockscreen-slide-track .lockscreen-slide-center {
-  width: 22rem;
-}
-
-@media (min-width: 768px) {
-  #lockscreen-area-slide #lockscreen-slide-track .lockscreen-slide-center {
-    width: 35rem;
-  }
-}
-
-#lockscreen-area-slide #lockscreen-slide-track .lockscreen-icon {
-  border-color: rgba(255, 255, 255, 0.4) !important;
-}
-
 #lockscreen-area-slide .lockscreen-icon {
   background-color: none;
   -moz-box-sizing: border-box;
   border: 0.2rem solid rgba(255, 255, 255, 0.8);
-}
-
-#lockscreen-slide-track .lockscreen-slide-left.lockscreen-icon {
-  /* half-circle toward left */
-  border-radius: 6rem 0 0 6rem;
-  border-right: none;
-  display: inline-block;
-
-  /* to move it while sliding */
-  position: relative;
-  height: 6rem;
-  width: 3rem;
-
-  /* Should be high enough but be overlayed by the slide */
-  z-index: 4;
-}
-
-#lockscreen-slide-handle .lockscreen-slide-left.lockscreen-icon {
-  border: none;
-
-  /* half-circle toward left */
-  border-radius:5.6rem 0 0 5.6rem;
-  border-right: none;
-  display: inline-block;
-
-  /* to move it while sliding */
-  position: relative;
-  height: 5.6rem;
-  width: 2.8rem;
-
-  /* Should be high enough but be overlayed by the slide */
-  z-index: 4;
 }
 
 .lockscreen-slide-left.lockscreen-icon > span {
@@ -330,7 +284,7 @@
   border-radius: 0rem;
 
   /* workaround for splitting circle */
-  margin-left: -0.3rem;
+  margin-left: -0.25rem;
   margin-right: -0.3rem;
 
   /* to move and scale it while sliding */
@@ -344,19 +298,6 @@
 
 #lockscreen-slide-handle .lockscreen-slide-center.lockscreen-icon {
   height: 5.6rem;
-}
-
-#lockscreen-slide-track .lockscreen-slide-right.lockscreen-icon {
-  border-left: none;
-
-  /* half-circle toward right */
-  border-radius: 0 6rem 6rem 0;
-  display: inline-block;
-  height: 6rem;
-
-  /* to move it while sliding */
-  position: relative;
-  width: 3rem;
 }
 
 #lockscreen-slide-handle .lockscreen-slide-right.lockscreen-icon {
@@ -449,7 +390,6 @@ button::-moz-focus-inner {
 }
 
 #lockscreen-area-unlock {
-  /* Otherwise it will be overlayed by the track. */
   z-index: 16;
   pointer-events: auto;
 }
@@ -468,7 +408,6 @@ button::-moz-focus-inner {
 }
 
 #lockscreen-area-camera {
-  /* Otherwise it will be overlayed by the track. */
   z-index: 16;
   pointer-events: auto;
 }
@@ -808,4 +747,5 @@ button::-moz-focus-inner {
   position: absolute;
   bottom: 0.75rem;
   z-index: 8;
+  width: 100%;
 }
