--- a/shared/style_unstable/seekbars.css
+++ b/shared/style_unstable/seekbars.css
@@ -25,9 +25,9 @@ div[role="slider"] progress {
 }
 
 div[role="slider"] progress::-moz-progress-bar {
-  background: #01c5ed;
-  height: 0.6rem;
-  margin-top: -0.3rem;
+  background: #00b7d4;
+  height: 0.5rem;
+  margin-top: -0.2rem;
   border-radius: 0;
 }
 
@@ -60,20 +60,43 @@ div[role="slider"] > label.icon:first-of-type {
 }
 
 div[role="slider"] button {
-  width: 3.2rem;
-  height: 3.2rem;
-  background: url(seekbars/images/ui/handler.png) no-repeat center center / 3rem auto;
+  width: 2.6rem;
+  height: 2.6rem;
   font: 0/0 a;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 0;
   margin: -1.5rem 0 0 -1.6rem;
-  border-radius: 3.2rem;
-  border: solid 0.1rem transparent;
-  transition: border 0.15s ease;
+  border-radius: 2.6rem;
+  border: solid 0.2rem transparent;
   padding: 0;
 }
 
-div[role="slider"] button:active {
-  border: solid 0.5rem #01c5ed;
+div[role="slider"] button::before {
+  position: absolute;
+  top: -10%;
+  left: -10%;
+  width: 2.6rem;
+  height: 2.6rem;
+  content: '';
+  background-color: #00d3f4;
+  border-radius: 2.6rem;
+    -moz-transition: -moz-transform 0.2s ease;
+  transition: transform 0.2s ease;
+}
+
+div[role="slider"] button:active::before {
+    -moz-transform: scale(1.2, 1.2);
+  transform: scale(1.2, 1.2);
+}
+
+div[role="slider"] button::after {
+  position: absolute;
+  top: -2%;
+  left: -1.2%;
+  width: 2.2rem;
+  height: 2.2rem;
+  content: '';
+  background-color: #ffffff;
+  border-radius: 2.2rem;
 }
