--- a/apps/system/style/notifications/downloads.css
+++ b/apps/system/style/notifications/downloads.css
@@ -2,3 +2,7 @@
 #screen.utility-tray .notification[data-type="download-notification-downloading"] > img {
   animation: 0.9s fn-rotate infinite steps(30);
 }
+
+#screen.utility-tray .notification[data-type="download-notification-downloading"] .timestamp {
+  display: none;
+}
