Bug 923139 - Making the phone app more accessible.

--- a/apps/communications/dialer/style/keypad.css
+++ b/apps/communications/dialer/style/keypad.css
@@ -208,7 +208,7 @@ article:not(:target) #keypad-delete {
   vertical-align: middle;
 }
 
-#keypad-callbar-add-contact.disabled {
+#keypad-callbar-add-contact[disabled] {
   opacity: 0.2;
 }
 
