--- a/apps/communications/dialer/style/dialer.css
+++ b/apps/communications/dialer/style/dialer.css
@@ -37,7 +37,6 @@ a:hover, a:active, a:focus {
 }
 
 .grid-wrapper {
-  position: absolute;
   width: 100%;
   height: 100%;
 }
@@ -96,18 +95,11 @@ body.hidden *[data-l10n-id] {
 /* Making lazy loading look nice */
 #contacts-view [role="tabpanel"],
 #recents-view.hidden [role="tabpanel"] {
-  background-color: white;
-}
-
-#contacts-view [role="tabpanel"]:before,
-#recents-view.hidden [role="tabpanel"]:before {
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 5rem;
-
-  background-color: #F97C17;
-  content: "";
+  background-image: url(/shared/style/headers/images/ui/header.png),
+                    url(/shared/style/headers/images/ui/shadow.png);
+  background-repeat: repeat-x;
+  background-position: 0 0, 0 5rem;
+  background-size: 100% 5rem, 100% 0.3rem;
 }
 
 #iframe-contacts-container {
