--- a/apps/email/style/message_cards.css
+++ b/apps/email/style/message_cards.css
@@ -36,6 +36,31 @@
   border-bottom: 0.1rem solid #bdbdbd;
 }
 
+.msg-empty-trash-container {
+  padding: 1rem;
+  margin: 0;
+}
+
+.msg-empty-trash-button {
+  display: block;
+  text-align: center;
+  vertical-align: 50%;
+  font-size: 1.5rem;
+}
+
+.msg-empty-trash-icon {
+  display: inline-block;
+  width: 3rem;
+  height: 3.8rem;
+  background: url("images/icons/delete.png") no-repeat scroll center center / 3rem auto transparent !important;
+}
+
+.msg-empty-trash-label {
+  display: inline-block;
+  overflow: hidden;
+}
+
+
 /* When card is slightly shown when folder card is center,
    be sure any inputs do not accept clicks/taps that would
    mess up the transition back to the message list. Also
