--- a/apps/system/style/themes/default/buttons.css
+++ b/apps/system/style/themes/default/buttons.css
@@ -58,7 +58,7 @@
   background-color: #b70404;
   color: #fff;
   text-shadow: -0.1rem -0.1rem 0 #830b0b;
-  border: none; 
+  border: none;
 }
 
 /* Negative Press */
@@ -66,6 +66,22 @@
 [role="dialog"] a[role="button"].negative:active {
   background-image: url(images/ui/negative-press.png);
   background-color: #890707;
+}
+
+/* Recommand */
+[role="dialog"] button.recommand {
+  background-image: url(images/ui/recommend.png);
+  background-color: #00caf2;
+  color: #333;
+  text-shadow: 0.1rem 0.1rem 0 rgba(255,255,255,0.3);
+  border-color: #008eab;
+}
+
+/* Recommand Press */
+[role="dialog"] button.recommand:active {
+  border-color: #008aaa;
+  background: #008aaa;
+  color: #333;
 }
 
 /* Disabled (default & affirmative) */
