Bug 946718 - [SMS] When there's no messages, the header shows a shadow below

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -195,12 +195,7 @@ form[data-type="action"] img[src=""] {
   height: 100%;
   left: 0;
   top: 0;
-
-  background-image: url(/shared/style/headers/images/ui/header.png),
-                    url(/shared/style/headers/images/ui/shadow.png);
-  background-repeat: repeat-x;
-  background-position: 0 0, 0 5rem;
-  background-size: 100% 5rem, 100% 0.3rem;
+  background: #fff;
 }
 
 .panel:first-child {
