--- a/apps/keyboard/style/keyboard.css
+++ b/apps/keyboard/style/keyboard.css
@@ -37,8 +37,10 @@ button::-moz-focus-inner {
   bottom: 0;
   z-index: 15;
   width: 100%;
-  border-top: 0.1rem solid #a1a5a8;
-  background-color: #606b6e;
+  padding: 0.8rem 0 0;
+  border-top: 0.2rem solid;
+  -moz-border-top-colors: #0b0b0b #999d9d;
+  background-color: #6d7273;
   pointer-events: auto;
   visibility: visible;
 }
@@ -47,37 +49,9 @@ button::-moz-focus-inner {
   visibility: hidden;
 }
 
-/* Row styles */
+/* Rows */
 .keyboard-row {
   text-align: center;
-  font-size: 0;
-}
-.row1 {
-  background-color: #5b6668;
-}
-
-.row2 {
-  background-color: #566061;
-}
-
-.row3 {
-  background-color: #525c5e;
-}
-
-.row0 > .keyboard-key > .visual-wrapper > span {
-  border-right-color: #525b5e;
-}
-
-.row1 > .keyboard-key > .visual-wrapper > span {
-  border-right-color: #4c5657;
-}
-
-.row2 > .keyboard-key > .visual-wrapper > span {
-  border-right-color: #475052;
-}
-
-.row3 > .keyboard-key > .visual-wrapper > span {
-  border-right-color: #434b4d;
 }
 
 #keyboard.full-candidate-panel button.keyboard-key {
@@ -86,26 +60,35 @@ button::-moz-focus-inner {
 
 /* Buttons: logic keys */
 .keyboard-key {
+  -moz-box-sizing: border-box;
   display: inline-block;
   min-width: 2.6rem;
-  padding: 0;
-  font-size: 0;
-  font-family: sans-serif;
+  padding: 0 0.1rem;
   border: none;
   background: none;
 }
 
+.keyboard-last-row .keyboard-key {
+  padding-bottom: 0.2rem;
+}
+
 /* Visible keys */
-.keyboard-key > .visual-wrapper {
+.keyboard-key > .visual-wrapper,
+.keyboard-key.special-key.big-key > .visual-wrapper {
+  -moz-box-sizing: border-box;
   display: inline-block;
   position: relative;
   width: 100%;
-  height: 4.3rem;
-  margin: 0.4rem 0;
+  height: 4.2rem;
+  margin-bottom: 0.3rem;
+  border: 0.1rem solid #1b1d1d;
+  border-radius: 0.3rem;
+  background-color: #262422;
 }
 
 /* Standard key styles. */
-.keyboard-key > .visual-wrapper > span {
+.keyboard-key > .visual-wrapper > span,
+.keyboard-key.special-key.big-key > .visual-wrapper > span {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -113,82 +96,123 @@ button::-moz-focus-inner {
   right: 0;
   color: #fff;
   font-size: 2.4rem;
-  line-height: 4.3rem;
-  font-weight: normal;
+  line-height: 3.8rem;
+  font-weight: 500;
   text-align: center;
-  border-right: 0.1rem solid #525b5e;
-  border-left: 0.1rem solid transparent;
+  border-top: 0.1rem solid #504e4d;
+  border-radius: 0.3rem;
 }
 
-.keyboard-key:last-child > .visual-wrapper > span {
-  border-right: transparent;
+/* Highlights */
+.keyboard-key.highlighted {
+  position: relative;
+  z-index: 100;
+}
+
+.keyboard-key.highlighted > .visual-wrapper {
+  border: none;
+  border-radius: 0 0 0.3rem 0.3rem;
+  background-color: #00acd1;
+}
+
+.keyboard-key.highlighted > .visual-wrapper:after,
+.keyboard-key.highlighted > .visual-wrapper > span:after {
+  content: '';
+  position: absolute;
+  top: -0.4rem;
+  right: -0.2rem;
+  bottom: -0.2rem;
+  left: -0.2rem;
+  z-index: -1;
+  border-radius: 0 0 0.3rem 0.3rem;
+  background-color: #363839;
+}
+
+.keyboard-key.highlighted > .visual-wrapper:before {
+  content: '';
+  position: absolute;
+  top: -0.8rem;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 0.8rem;
+  border-radius: 0;
+  background-color: #00acd1;
 }
 
 .keyboard-key.highlighted > .visual-wrapper > span {
-  color: #00caf2;
-  background-color: #4a5255;
-  margin: -0.4rem 0 -0.4rem -0.1rem;
-  padding: 0.4rem 0 0 0.1rem;  
+  top: -5.6rem;
+  left: -0.5rem;
+  right: -0.5rem;
+  height: 5rem;
+  color: #1a3f46;
+  font-size: 3.6rem;
+  line-height: 5rem;
+  font-weight: 500;
+  border: none;
+  border-radius: 0.2rem;
+  background-color: #00acd1;
 }
 
 .keyboard-key.highlighted > .visual-wrapper > span:after {
-  content: attr(data-label);
-  position: absolute;
-  top: -5.4rem;
-  left: calc(50% - 2.8rem);
-  width: 5.6rem;
-  height: 5.6rem;
-  color: #fff;
-  font-size: 2.8rem;
-  font-weight: medium;
-  line-height: 5.6rem;
-  border-radius: 50%;
-  background-color: #00aacc;
+  top: -0.2rem;
+  right: -0.2rem;
+  bottom: -0.2rem;
+  left: -0.2rem;
+  border-radius: 0.3rem;
 }
 
-
-.keyboard-key.highlighted.kbr-menu-on > .visual-wrapper > span:after {
-  display: none;
+/* last key from row */
+.keyboard-key.highlighted:last-child > .visual-wrapper > span {
+  right: 0;
 }
 
-.keyboard-row button:last-child.highlighted > .visual-wrapper > span:after {
-   left: -2.4rem;
+.keyboard-key.highlighted:last-child > .visual-wrapper > span:after {
+  right: -0.2rem;
+  border-bottom-right-radius: 0;
 }
 
-.keyboard-row button:first-child.highlighted > .visual-wrapper > span:after {
-    left: 0rem;
+.keyboard-key.highlighted:last-child #keyboard-accent-char-menu.kbr-menu-left {
+  right: 0;
 }
 
+/* first key from row */
+.keyboard-key.highlighted:first-child > .visual-wrapper > span {
+  left: 0;
+}
 
+.keyboard-key.highlighted:first-child > .visual-wrapper > span:after {
+  /*right: -0.2rem;*/
+  border-bottom-left-radius: 0;
+}
+
+.keyboard-key.highlighted:first-child #keyboard-accent-char-menu {
+  left: 0;
+}
 
 /* Special keys */
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper,
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper:after {
+  border-radius: 0.3rem;
+}
+
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper:after {
+  top: -0.2rem;
+}
+
+.keyboard-key.special-key > .visual-wrapper {
+  border-color: #2a2c2e;
+  background-color: #44494a;
+}
 .keyboard-key.special-key > .visual-wrapper > span {
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  color: #abb0b1;
-  font: 500 1.5rem/4.3rem 'Keyboard Symbols', sans-serif;
+  color: #ccc;
+  font: 500 1.5rem/3.9rem 'Keyboard Symbols', sans-serif;
+  border-color: #6a6c6e;
 }
-
-.keyboard-key.special-key.highlighted > .visual-wrapper > span:after {
-  font-size: 2.0rem;
-}
-
-
-/* Highlight for special keys */
-.keyboard-key.special-key.highlighted > .visual-wrapper > span {
-  color: #00b8d6;
-}
-
-.keyboard-key.special-key.highlighted > .visual-wrapper:before,
-.keyboard-key.special-key.highlighted > .visual-wrapper:after,
-.keyboard-key.special-key.highlighted > .visual-wrapper > span:after,
-.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper > span:after,
-#keyboard-accent-char-menu .keyboard-key > .visual-wrapper:before {
-  display: none;
-}
-
 
 /* For disabled keys */
 .keyboard-key.special-key[disabled="true"] {
@@ -211,6 +235,28 @@ button::-moz-focus-inner {
   font-family: Sans-serif;
 }
 
+/* Highlight for special keys */
+.keyboard-key.special-key.highlighted > .visual-wrapper {
+  border: 0.1rem solid #2a2c2e;
+  border-radius: 0.3rem;
+}
+
+.keyboard-key.special-key.highlighted > .visual-wrapper > span {
+  color: #6ec5d5;
+  border-top: 0.1rem solid #6a6c6e;
+  background: none;
+}
+
+.keyboard-key.special-key.highlighted > .visual-wrapper:before,
+.keyboard-key.special-key.highlighted > .visual-wrapper:after,
+.keyboard-key.special-key.highlighted > .visual-wrapper > span:after,
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper:before,
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper > span,
+.keyboard-key.highlighted[data-keycode="32"] > .visual-wrapper > span:after,
+#keyboard-accent-char-menu .keyboard-key > .visual-wrapper:before {
+  display: none;
+}
+
 /* For keyboard layout menu*/
 .keyboard-key.special-key.highlighted.kbr-menu-on > .visual-wrapper:before,
 .keyboard-key.special-key.highlighted.kbr-menu-on > .visual-wrapper:after {
@@ -223,18 +269,50 @@ button::-moz-focus-inner {
 
 /* Key states */
 /* Active key, used for caps Lock key */
-.keyboard-key.kbr-key-active > .visual-wrapper > span,
-.keyboard-key.special-key.kbr-key-hold > .visual-wrapper > span {
-  color: #00caf2;
+.keyboard-key.kbr-key-active > .visual-wrapper {
+  background-color: #006a80;
 }
 
+.keyboard-key.kbr-key-active.highlighted > .visual-wrapper {
+  background-color: #2b8395;
+}
+
+.keyboard-key.kbr-key-active > .visual-wrapper > span {
+  color: #fff;
+  border-color: rgba(255, 255, 255, .2);
+}
+
+.keyboard-key.kbr-key-active.highlighted > .visual-wrapper > span {
+  border-color: rgba(255,255,255, .2);
+}
+
+/* Hold */
 .keyboard-key.kbr-key-hold > .visual-wrapper {
-  box-shadow: 0 0.4rem 0 #00caf2;
+  background-color: #00aac8;
 }
 
+.keyboard-key.kbr-key-hold > .visual-wrapper > span {
+  color: #333;
+  border-color: rgba(255,255,255, .3);
+}
+
+.keyboard-key.kbr-key-hold.highlighted > .visual-wrapper {
+  background-color: #2bb8d1;
+}
+
+.keyboard-key.kbr-key-hold.highlighted > .visual-wrapper > span {
+  border-color: rgba(255,255,255, .3);
+}
 
 /* Alt menu enabled */
+.keyboard-key.highlighted.kbr-menu-on > .visual-wrapper {
+  height: 4.2rem;
+  border: none;
+  background-color: #00acd1;
+}
+
 .keyboard-key.highlighted.kbr-menu-on > .visual-wrapper > span {
+  top: -5.3rem;
   background: none;
 }
 
@@ -256,32 +334,59 @@ and displays the list of alternatives. */
 #keyboard-accent-char-menu {
   display: none;
   position: absolute;
-  top: -6rem;
-  height: 6rem;
-  font-size: 0;
-  border-radius: 3rem;
-  background-color: #00aacc;
-  overflow: hidden;
+  bottom: 0.3rem;
+  left: 0.5rem;
+  height: 5rem;
+  border-radius: 0.3rem;
+  background-color: #212c2c;
   white-space: nowrap;
+}
+
+#keyboard-accent-char-menu:after {
+  content: '';
+  position: absolute;
+  top: -0.2rem;
+  right: -0.2rem;
+  bottom: -0.2rem;
+  left: -0.2rem;
+  z-index: -1;
+  border-radius: 0.3rem;
+  border-bottom-left-radius: 0;
+  background-color: #363839;
 }
 
 #keyboard-accent-char-menu.show {
   display: block;
 }
 
+/* Alternatives from left */
 #keyboard-accent-char-menu.kbr-menu-left {
-  right: 0;
+  left: auto;
+  right: 0.5rem;
+}
+
+#keyboard-accent-char-menu.kbr-menu-left:after {
+  border-radius: 0.3rem;
+  border-bottom-right-radius: 0;
 }
 
 /* Non keyboard key styles in menu */
 #keyboard-accent-char-menu .keyboard-key {
+  position: relative;
   min-width: 3rem; /* we need to recalculate the inline width (2.4rem) */
+  height: 100%;
+  padding: 0;
+  vertical-align: top;
+  background: none;
 }
 
 #keyboard-accent-char-menu .keyboard-key > .visual-wrapper {
-  height: 6rem;
+  background: none;
+  border: none;
+  border-radius: 0;
   margin: 0;
-  border-right: 1px solid #0099b8;
+  height: 5rem;
+  border-right: 1px solid #4d4d4d;
 }
 
 #keyboard-accent-char-menu .keyboard-key > .visual-wrapper span {
@@ -297,23 +402,38 @@ and displays the list of alternatives. */
 /* Styles for keys in accent menu (not highlighted). */
 #keyboard-accent-char-menu .keyboard-key > .visual-wrapper > span {
   border: none;
-  line-height: 6rem;
+  font-size: 3.6rem;
+  line-height: 5rem;
   font-weight: 500;
   color: #fff;
-}
-
-#keyboard-accent-char-menu .keyboard-key:first-child > .visual-wrapper > span {
-  padding-left: 0.5rem;
-}
-
-#keyboard-accent-char-menu .keyboard-key:last-child > .visual-wrapper > span {
-  padding-right: 0.5rem;
 }
 
 /* Highlighted special accent characters. These keys appear in the popover
 bubble above the key when you tap and hold. */
 #keyboard-accent-char-menu .keyboard-key.highlighted > .visual-wrapper > span {
-  background-color: #0099b8;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  font-weight: normal;
+  border-radius: 0;
+  background-color: #00acd1;
+}
+
+#keyboard-accent-char-menu.kbr-menu-left .keyboard-key.highlighted:first-child > .visual-wrapper > span {
+  border-radius: 0.2rem 0 0 0.2rem;
+}
+
+#keyboard-accent-char-menu.kbr-menu-left .keyboard-key.highlighted:last-child > .visual-wrapper > span {
+  border-radius: 0 0.2rem 0 0;
+}
+
+#keyboard-accent-char-menu .keyboard-key.highlighted:first-child > .visual-wrapper > span {
+  border-radius: 0.2rem 0 0 0;
+}
+
+#keyboard-accent-char-menu .keyboard-key.highlighted:last-child > .visual-wrapper > span {
+  border-radius: 0 0.2rem 0.2rem 0;
 }
 
 /* Language alternatives */
@@ -338,6 +458,18 @@ bubble above the key when you tap and hold. */
 .keyboard-key.special-key.highlighted.kbr-menu-on {
   position: relative;
   z-index: 100;
+}
+
+.keyboard-key.special-key.highlighted.kbr-menu-on > .visual-wrapper {
+  background-color: #212c2c;
+  border-radius: 0 0 0.3rem 0.3rem;
+}
+
+.keyboard-key.special-key.highlighted.kbr-menu-on > .visual-wrapper > span {
+  color: #fff;
+  line-height: 5.2rem;
+  border: none;
+  top: 0;
 }
 
 #keyboard-accent-char-menu.kbr-menu-lang .keyboard-key {
@@ -375,7 +507,6 @@ bubble above the key when you tap and hold. */
 #keyboard-accent-char-menu.kbr-menu-lang .keyboard-key.highlighted > .visual-wrapper {
   background-color: #00acd1;
 }
-
 
 /* IMEs */
 #keyboard-pending-symbol-panel {
@@ -485,13 +616,13 @@ bubble above the key when you tap and hold. */
   display: block;
   white-space: nowrap;
   height: 3rem;
-  width: 100%;
-  background: #333;
+  width: -moz-calc(100% - 1rem);
+  background: #000;
   /* I don't know why we need the top and bottom margins */
   /* the left and right just give nice side borders */
-  margin: -0.6rem 0rem 0rem 0rem;
+  margin: -0.6rem 0.2rem 0.2rem 0.2rem;
+  padding: 0 0.3rem;
   border: none;
-  border-bottom: 0.1rem solid #a0a6a8;
   overflow: hidden;
 }
 
@@ -525,8 +656,7 @@ bubble above the key when you tap and hold. */
    * and make it fit.
    */
   display: inline;
-  font-size: 2.0rem;
-  font-weight: normal;
+  font-size: 2.3rem;
   line-height: 3rem;
   height: 3rem;
   border: 0;
@@ -572,29 +702,17 @@ bubble above the key when you tap and hold. */
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
-  color: #a6a6a6;
-  font: 1.6rem/1.6rem "Keyboard Symbols", sans-serif;
+  color: #999;
+  font: 1.6rem/1.6rem "Keyboard Symbols", Sans-serif;
 }
 
 .keyboard-key.highlighted  .alt-note {
   visibility: hidden;
 }
 
-.keyboard-key.big-key > .visual-wrapper span {
-  font-size: 3rem;
-  font-weight: normal;
-  color: #fff;
-}
-
-.keyboard-key.big-key .visual-wrapper .alt-note {
-    width: 100%;
-    text-align: center;
-    margin-top: 1.5rem;
-    text-indent: 4rem;
-}
-
 .keyboard-key.big-key.highlighted .alt-note {
   visibility: visible;
+  color: #555;
 }
 
 /* Increase tap area for first / last keys in a row that
@@ -622,22 +740,6 @@ bubble above the key when you tap and hold. */
   #confirm-dialog .tip-section {
     background: url(images/ftu_keyboard_landscape.png) no-repeat top left;
     width:47rem;
-  }
-  #keyboard.landscape .keyboard-key > .visual-wrapper > span {
-    font-size: 2.8rem
-  }
-
-  #keyboard.landscape .keyboard-key.special-key > .visual-wrapper > span {
-    font: 500 2.1rem/4.3rem 'Keyboard Symbols', sans-serif;
-  }
-
-  #keyboard.landscape .keyboard-key.highlighted > .visual-wrapper > span:after {
-      top: -7rem;
-      left: calc(50% - 3.5rem);
-      width: 7rem;
-      height: 7rem;
-      line-height: 7rem;
-      font-size: 3.5rem
   }
 }
 
